<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <ImageView
        android:id="@+id/loginHeader"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:src="@drawable/login_header"
        android:scaleType="fitXY"/>

    <TextView
        android:id="@+id/logTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/loginHeader"
        android:text="Login"
        android:textSize="30sp"
        android:layout_marginTop="30dp"
        />

    <ScrollView
        android:id="@+id/sv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/logTitle">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="-60dp"
            android:layout_marginRight="50dp">

            <android.support.v7.widget.CardView
                android:id="@+id/cv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="50dp"
                app:cardElevation="3dp"
                android:layout_margin="10dp">

               <RelativeLayout
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginLeft="60dp"
                   android:padding="10dp">

                   <EditText
                       android:id="@+id/username"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:hint="@string/prompt_email"
                       android:inputType="textEmailAddress"
                       android:selectAllOnFocus="true"
                       android:layout_margin="10dp"
                       android:background="@android:color/transparent"
                       android:padding="10dp"
                       android:drawableLeft="@drawable/ic_person"
                       android:drawablePadding="30dp"/>

                   <View
                       android:id="@+id/view1"
                       android:layout_width="match_parent"
                       android:layout_height="2dp"
                       android:background="#000"
                       android:layout_below="@+id/username"/>

                   <EditText
                       android:id="@+id/password"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:layout_margin="10dp"
                       android:background="@android:color/transparent"
                       android:padding="10dp"
                       android:layout_below="@id/view1"
                       android:drawableLeft="@drawable/ic_lock"
                       android:drawablePadding="30dp"
                       android:hint="@string/prompt_password"
                       android:imeActionLabel="@string/action_sign_in_short"
                       android:imeOptions="actionDone"
                       android:inputType="textPassword"
                       android:selectAllOnFocus="true" />

               </RelativeLayout>


            </android.support.v7.widget.CardView>

            //PROBANDOOO
            <Button
                android:layout_below="@id/cv"
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Succesful Login"
                />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="10dp"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@+id/cv"
                android:layout_alignBottom="@+id/cv"
                android:layout_marginRight="-10dp">

                <ImageButton
                    android:id="@+id/login"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@color/colorPrimary"
                    android:src="@drawable/ic_arrow"
                    android:layout_centerVertical="true"
                    android:enabled="false"
                    android:text="@string/action_sign_in"
                    />

            </RelativeLayout>


        </RelativeLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        />



</RelativeLayout>
