<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/fondo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/grad">

            <RelativeLayout
                android:id="@+id/imUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp">


                <ImageView
                    android:layout_width="125dp"
                    android:layout_height="120dp"
                    android:layout_margin="9dp"
                    android:padding="3dp"
                    android:src="@drawable/icon_blanco_amarillo" />

            </RelativeLayout>

            <TextView
                android:id="@+id/userProfileName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/imUser"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15sp"
                android:text="@string/frag_prof_user_name"
                android:textColor="@color/white"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/userProfileAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/userProfileName"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="40dp"
                android:text="@string/frag_prof_user_type"
                android:textAllCaps="true"
                android:textColor="@color/address"
                android:textSize="14sp" />

        </RelativeLayout>


        <android.support.v7.widget.CardView
            android:id="@+id/userProfileRecordsCV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fondo"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="-30dp"
            android:elevation="10dp"
            app:cardCornerRadius="5dp">

            <LinearLayout
                android:id="@+id/userProfileRecords"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/fondo"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/frag_prof_user_level"
                            android:textColor="@color/yellow_logo"
                            android:textSize="25sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="level"
                            android:textAllCaps="true"
                            android:textColor="@color/blue_logo"
                            android:textSize="12sp" />
                    </LinearLayout>
                </RelativeLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginVertical="15dp"
                    android:background="@color/grey"
                    android:padding="5dp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/frag_prof_user_chats_score"
                            android:textColor="@color/yellow_logo"
                            android:textSize="25sp" />

                        <TextView
                            android:textAlignment="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="completed chats"
                            android:textAllCaps="true"
                            android:textColor="@color/blue_logo"
                            android:layout_marginLeft="2dp"
                            android:textSize="12sp" />

                    </LinearLayout>
                </RelativeLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginVertical="15dp"
                    android:background="@color/grey"
                    android:padding="5dp" />


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/frag_prof_user_chats_unfinished"
                            android:textColor="@color/yellow_logo"
                            android:textSize="25sp" />

                        <TextView
                            android:textAlignment="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Abandoned chats  "
                            android:textAllCaps="true"
                            android:layout_marginLeft="2dp"
                            android:textColor="@color/blue_logo"
                            android:textSize="12sp" />
                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>

        </android.support.v7.widget.CardView>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/userProfileRecordsCV">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="ID"
                        android:textColor="@color/headings"
                        android:textSize="13sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/frag_prof_user_id_numb"
                        android:textColor="#000000"
                        android:textSize="18sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="15dp"
                        android:background="@color/grey" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Birthday"
                        android:textColor="@color/headings"
                        android:textSize="13sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/frag_prof_user_birth"
                        android:textColor="#000000"
                        android:textSize="18sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="15dp"
                        android:background="@color/grey" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:paddingTop="15dp"
                        android:paddingBottom="15dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Next Chats"
                        android:textColor="@color/headings"
                        android:textSize="13sp" />
                    <android.support.v7.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/profile_next_rv">


                    </android.support.v7.widget.RecyclerView>

                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/grey" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:paddingTop="15dp"
                        android:paddingBottom="15dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Previous Chats"
                        android:textColor="@color/headings"
                        android:textSize="13sp" />

                    <android.support.v7.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/profile_previous_rv">


                    </android.support.v7.widget.RecyclerView>

                </LinearLayout>

            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>
</ScrollView>
